# weekly-financial-research-agent

./: AGENTS.md  README.md  main.py  pyproject.toml  test_httpx.py
debug_output/: final_packet.json  full_state.json  run_metadata.json  source_summaries.json  sources.json  weekly_report.md
src/agent_lab/: agent.py  debug_io.py  llm.py  main.py  momentum_normalizer.py  reporting.py  research_graph.py  research_main.py  signals_normalizer.py
src/agent_lab/cli/: weekly_report.py
src/agent_lab/clients/: macro_api.py  market_api.py  momentum_api.py  regime_api.py  sector_rotation_api.py  signals_api.py  web_search.py
src/agent_lab/core/: __init__.py  settings.py
src/agent_lab/normalizers/: momentum.py  momentum_configs.py  sector_rotation.py  signals.py
src/agent_lab/output/: __init__.py  debug.py
src/agent_lab/rendering/: __init__.py  charts.py
src/agent_lab/tools/: macro_api.py  market_api.py  momentum_api.py  python_exec.py  regime_api.py  sector_rotation_api.py  signals_api.py  web_search.py
src/agent_lab/workflow/: graph.py  schemas.py
tests/: test_reporting.py  test_signals_normalizer.py
